--- a/PasswordManagerMainWindow/PasswordManagerApp.csproj
+++ b/PasswordManagerMainWindow/PasswordManagerApp.csproj
@@ -220,7 +220,9 @@
   <ItemGroup>
     <Resource Include="AuthenticationWindow\Assets\EmailConfirmationMessage.txt" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="MainWindow\Assets\defaultLogo.png" />
+  </ItemGroup>
   <ItemGroup>
     <Resource Include="MainWindow\Assets\closed_eye.png" />
     <Resource Include="MainWindow\Assets\closed_eye_white.png" />
