--- a/Services/ServicesLibrary.csproj
+++ b/Services/ServicesLibrary.csproj
@@ -59,7 +59,7 @@
   <ItemGroup>
     <Compile Include="EMailService.cs" />
     <Compile Include="InternetService.cs" />
-    <Compile Include="LogoFinder.cs" />
+    <Compile Include="LogoService.cs" />
     <Compile Include="PasswordsService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
